# Paper

./: .gitignore  00_START_HERE.md  ARCHITECTURE.md  COMMANDS.sh  DELIVERY.md  INDEX.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  check_sensor.py  config.py  eda.py  generate_plots.py  infer.py  infer_aero.py  launch_gpu.sh  main_train.py  preprocess_data.py  pyproject.toml  requirements.txt  symbolic_regression.py  test_imports.py
configs/: baseline_mlp.yaml  baseline_mlp_smoke.yaml  cp_grid_cases_2_65_79_39.yaml  critical_cp_grid.yaml  data.yaml  evaluation.yaml  features.yaml  features_cases_2_65_79_39.yaml  fourier_graph.yaml  graph.yaml  labels.yaml  labels_cases_2_65_79_39.yaml  oracle_gated_residual.yaml  pysr.yaml  pysr_cases_2_65_79_39.yaml  shock_score.yaml  symbolic_dataset.yaml  symbolic_gated_residual.yaml  symbolic_sensor.yaml  symbolic_weighted_graph.yaml
cp_shock_project/: __init__.py
notebooks/: eda_dataset.ipynb
scripts/: 00_inspect_arrays.py  01_build_case_index.py  02_build_knn_graphs.py  02_compute_features.py  03_compute_oracle_shock_score.py  03_generate_labels.py  04_build_symbolic_dataset.py  04_build_symbolic_sensor_dataset.py  05_train_symbolic_sensor.py  06_evaluate_symbolic_sensor.py  06_train_cp_model.py  07_evaluate_cp_model.py  07_export_sensor.py  08_plot_critical_cp_grid.py  08_plot_predictions.py  09_export_symbolic_sensor.py  09_run_2d_pipeline.py
shock_symbolic/: __init__.py
src/: __init__.py  data_loader.py  evaluation.py  models.py  preprocessing.py  training.py
tests/: __init__.py  conftest.py  test_case_indexing.py  (+15 more)
(+76 files in other folders)
